@@ -673,7 +673,7 @@ namespace Graphics::GUI
 
 			ImGui::Text("Shininess");
 			float shininess = mat->GetShininessValue();
-			if (ImGui::DragFloat("##shininess", &shininess, 0.1f, 0.001f, 128.0f))
+			if (ImGui::DragFloat("##shininess", &shininess, 0.1f, 0.5f, 256.0f))
 			{
 				mat->SetShininessValue(shininess);
 				if (!SceneFile::unsavedChanges) Render::SetWindowNameAsUnsaved(true);
